# Masterarbeit

./: .gitignore  README.md
Programming/StaticSol_Dev/: CMakeLists.txt
Programming/StaticSol_Dev/Build_OSX/: CMakeCache.txt  Makefile  cmake_install.cmake  data.txt  plot.py  tutorial
Programming/StaticSol_Dev/header/: rhs.h
Programming/StaticSol_Dev/src/: main.cpp  rhs.cpp
Programming/StaticSol_Dev_Euler/: a.out  data.txt  main.cpp  plot.py
